--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yourwebshield",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A middleware package for blocking risky IPs based on risk score.",
   "main": "ipBlocker.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.4.0"
   }
 }
