--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yourwebshield",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "A middleware package for blocking risky IPs based on risk score.",
   "main": "ipBlocker.js",
   "scripts": {
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "https://github.com/peters-web-hosting/yws-node/"
   },
+  "homepage": "https://www.yourwebshield.co.uk/",
   "keywords": [
     "ip",
     "blocker",
